# mozio_test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
core/api/: models.py  serializers.py  tests.py  views.py
core/api/migrations/: 0001_initial.py
proxy/: Dockerfile
scripts/: run.sh
