[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Matheus Amorim <matheusamorimsouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework-gis = "^1.0"
drf_yasg = '^1.20.1'
uWSGI = "^2.0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Faker = "^15.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
